--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
      <!-- About Me Section-->
     <section>
+      <img src="./assets/images/headshot.jpeg" alt="Headshot of Portfolio Owner"/>
       <h1>About Me</h1>
       <p>
         Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
@@ -33,31 +34,42 @@
     </section>
     <!-- Work Section-->
     <main>
-      <!-- Product Cards -->
       <!-- Need to make this one bigger  -->
-      <div class="products">
-        <section class="card">
-          <header>Camera</header>
-          <img src="./assets/images/camera.jpg" alt="camera" />
-          <p>Price: $300</p>
+      <div class="projects">
+        
+        <section class="bigproject">
+          <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
+          <h3>Project 1</h3>
+          <p>MERN Stack</p>
       <!-- Bigger project on top  -->
         </section>
-        <section class="card">
-          <header>Tablet</header>
-          <img src="./assets/images/tablet.jpg" alt="tablet" />
-          <p>Price: $150</p>
+
+        <section class="smallproject">
+          <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
+          <h3>Project 2</h3>
+          <p>Node/loT</p>
         </section>
-        <section class="card">
-          <header>Toilet Paper</header>
-          <img src="./assets/images/toilet-paper.jpg" alt="toilet paper" />
-          <p>Price: $30</p>
+
+        <section class="smallproject">
+          <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
+          <h3>Project 3</h3>
+          <p>React/Javascript/CSS</p>
         </section>
-        <section class="card">
-          <header>Wooden Spoons</header>
-          <img src="./assets/images/wooden-spoons.jpg" alt="wooden spoons" />
-          <p>Price: $10</p>
+
+        <section class="smallproject">
+          <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
+          <h3>Project 4</h3>
+          <p>MERN Stack</p>
         </section>
+
+        <section class="smallproject">
+          <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
+            <h3>Project 5</h3>
+            <p>HTML/CSS</p>
+        </section>
+      
       </div>
+
     </main>
 
     <!-- Contact Information Section-->
