--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <h1>Calvin Rhinesmith</h1>
       <nav>
         <ul>
-          <li><a href="#">About Me</a></li>
-          <li><a href="#">Work</a></li>
-          <li><a href="#">Contact Me</a></li>
-          <li><a href="#">Resume</a></li>
+          <li><a href="#About_Me">About Me</a></li>
+          <li><a href="#Work">Work</a></li>
+          <li><a href="#Contact_Me">Contact Me</a></li>
+          <li><a href="#Resume">Resume</a></li>
         </ul>
       </nav>
     </header>
@@ -27,7 +27,7 @@
      <!-- About Me Section-->
     <section>
       <img src="./assets/images/headshot.jpeg" alt="Headshot of Portfolio Owner"/>
-      <h1>About Me</h1>
+      <h2 id="About_Me">About Me</h1>
       <p>
         Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
       </p>
@@ -35,35 +35,45 @@
     <!-- Work Section-->
     <main>
       <!-- Need to make this one bigger  -->
-      <div class="projects">
-        
+      <div id="Work">
+      <!-- Will replace these as more projects and challenges are finished-->  
         <section class="bigproject">
-          <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
+          <a href="https://ripbog.github.io/01-crhinesmith-accessability/">
+          <img src="./assets/images/screenshot-hw1.png" alt="Square with text saying coming soon"/>
+          </a>
           <h3>Project 1</h3>
           <p>MERN Stack</p>
       <!-- Bigger project on top  -->
         </section>
 
         <section class="smallproject">
-          <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
+          <a href="https://github.com/ripbog">
+            <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
+          </a>
           <h3>Project 2</h3>
           <p>Node/loT</p>
         </section>
 
         <section class="smallproject">
-          <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
+          <a href="https://github.com/ripbog">
+            <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
+          </a>
           <h3>Project 3</h3>
           <p>React/Javascript/CSS</p>
         </section>
 
         <section class="smallproject">
-          <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
+          <a href="https://github.com/ripbog">
+            <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
+          </a>
           <h3>Project 4</h3>
           <p>MERN Stack</p>
         </section>
 
         <section class="smallproject">
-          <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
+          <a href="https://github.com/ripbog">
+            <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
+          </a>
             <h3>Project 5</h3>
             <p>HTML/CSS</p>
         </section>
@@ -74,13 +84,13 @@
 
     <!-- Contact Information Section-->
     <section>
-      <h1>Contact Me</h1>
+      <h1 id="Contact_Me">Contact Me</h1>
       <footer>
         <ul>
           <li><a href="#">316.259.1133</a></li>
           <li><a href="#">crhinesmith5@gmail.com</a></li>
           <li><a href="#">Github</a></li>
-          <li><a href="#">Resume</a></li>
+          <li id="Resume"><a href="#">Resume</a></li>
         </ul>
       </footer>
     </section>
