--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <header>
       <!-- Header-->
-      <h1>Calvin Rhinesmith</h1>
+      <p>Calvin Rhinesmith</p>
       <nav>
         <!-- Nav Bar-->
         <ul>
@@ -34,17 +34,19 @@
           <header>About Me</header>
           <p>
             <img src="./assets/images/headshot.jpeg" alt="Headshot of Portfolio Owner"/>
-          Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+           <!-- Will replace after consulting with career advisor-->
+            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
           </p>
       </div>
     </section>
     <!-- Work Section-->
     <main>
       <!-- Need to make this one bigger  -->
-      <h2 id="Work">Work</h2>
+      <section id="work">Work</section>
+        <hr></hr>
       <!-- Will replace these as more projects and challenges are finished-->  
       <div class ="projects">
-        <section class="card">
+        <section class="card1">
           <header>Project 1</header>
             <p>HTML/CSS</p>
           <a href="https://ripbog.github.io/01-crhinesmith-accessability/">
@@ -103,7 +105,6 @@
           <li><a href="#">316.259.1133</a></li>
           <li><a href="#">crhinesmith5@gmail.com</a></li>
           <li><a href="https://github.com/ripbog">Github</a></li>
-          <li id="Resume"><a href="#">Resume</a></li>
         </ul>
       </nav>
     </footer>
