--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li><a href="#About_Me">About Me</a></li>
           <li><a href="#Work">Work</a></li>
           <li><a href="#Contact_Me">Contact Me</a></li>
-          <li><a href="#Resume">Resume</a></li>
+          <li><a href="/assets/images/Resume.png">Resume</a></li>
         </ul>  
       </nav>
   
@@ -47,7 +47,7 @@
       <!-- Will replace these as more projects and challenges are finished-->  
       <div class ="projects">
         <section class="card1">
-          <header>Project 1</header>
+          <h2>Project 1</h2>
             <p>HTML/CSS</p>
           <a href="https://ripbog.github.io/01-crhinesmith-accessability/">
           <img src="./assets/images/screenshot-hw1.png" alt="Square with text saying coming soon"/>
@@ -57,7 +57,7 @@
         </section>
 
         <section class="card">
-          <header>Project 2</header>
+          <h2>Project 2</h2>
             <p>Node/loT</p>
           <a href="https://github.com/ripbog">
             <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
@@ -66,7 +66,7 @@
         </section>
 
         <section class="card">
-          <header>Project 3</header>
+          <h2>Project 3</h2>
             <p>React/Javascript/CSS</p>
           <a href="https://github.com/ripbog">
             <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
@@ -75,7 +75,7 @@
         </section>
 
         <section class="card">
-          <header>Project 4</header>
+          <h2>Project 4</h2>
             <p>MERN Stack</p>
           <a href="https://github.com/ripbog">
             <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
@@ -84,7 +84,7 @@
         </section>
 
         <section class="card">
-          <header>Project 5</header>
+          <h2>Project 5</h2>
             <p>HTML/CSS</p>
           <a href="https://github.com/ripbog">
             <img src="./assets/images/placeholderimg.png" alt="Square with text saying coming soon"/>
